--- a/index.html
+++ b/index.html
@@ -597,9 +597,9 @@
         <div>
           <h3 class="font-semibold text-lg mb-4">Horário de Funcionamento</h3>
           <div class="space-y-2 text-gray-400">
-            <div>Segunda - Sexta: 8h às 19h</div>
-            <div>Sábado: 8h às 17h</div>
-            <div>Domingo: Fechado</div>
+            <div>Segunda - Sexta: 9h às 22h</div>
+            <div>Sábado: 9h às 22h</div>
+            <div>Domingo: 9h às 22h</div>
           </div>
         </div>
         <div>
