fix: update operating hours for the barbershop

--- a/index.html
+++ b/index.html
@@ -597,9 +597,9 @@
         <div>
           <h3 class="font-semibold text-lg mb-4">Horário de Funcionamento</h3>
           <div class="space-y-2 text-gray-400">
-            <div>Segunda - Sexta: 9h às 22h</div>
-            <div>Sábado: 9h às 22h</div>
-            <div>Domingo: 9h às 22h</div>
+            <div>Segunda - Sexta: 11h30 às 20h</div>
+            <div>Sábado: 9h às 21h</div>
+            <div>Domingo: 12h às 14h</div>
           </div>
         </div>
         <div>
