--- a/index.html
+++ b/index.html
@@ -499,9 +499,9 @@
             <div>
               <h3 class="font-semibold text-lg mb-2">Horário de Funcionamento</h3>
               <div class="text-gray-600 dark:text-gray-300 space-y-1">
-                <div>Segunda - Sexta: 8h às 19h</div>
-                <div>Sábado: 8h às 17h</div>
-                <div>Domingo: Fechado</div>
+                <div>Segunda - Sexta: 11h30 às 20h</div>
+                <div>Sábado: 9h às 21h</div>
+                <div>Domingo: 12h às 14h</div>
               </div>
             </div>
           </div>
