fix: update login button text to English during login process

--- a/admin.html
+++ b/admin.html
@@ -338,8 +338,8 @@
     const password = document.getElementById('password').value;
     
     const loginBtn = document.getElementById('loginBtn');
-    loginBtn.disabled = true;
-    loginBtn.textContent = 'Entrando...';
+    loginBtn.disabled = true; 
+    loginBtn.textContent = 'Logging in...';
 
     try {
       // Tenta fazer login via API
